# urban-palm-tree

./: .gitignore  AGENTS.md  DATA.md  IDEAS.md  MODEL_BUILD_SUMMARY_2026-05-01.md  NOTES.md  PROJECT.md  README.md  SPEC.md  app_io.py  config.py  image.py  pyproject.toml  start.py  window.py
notebooks/: 01_dataset_inventory.ipynb  02_collate_tactical_dataset.ipynb  02_train_minimap_crop_teacher.ipynb  03_train_tactical_vision.ipynb  04_eval_tactical_vision.ipynb  04_train_pitch_keypoints_teacher.ipynb  05_realtime_inference_gating.ipynb  06_derived_tactical_features.ipynb  06_infer_screenshots.ipynb  07_validate_predictions.ipynb  08_build_combined_recordset.ipynb  README.md  create-data-entry-workbook-from-images.ipynb  crop-screenshots.ipynb  resize_screenshots.ipynb  rush-detection-model-infer-to-label-studio.ipynb  rush-detection-model-inference-analysis.ipynb  rush-detection-model.ipynb  rush-detection-service.ipynb  rush-model-training-colab.ipynb  screenshot-to-jpg.ipynb  squad-battles-selection-detection-model.ipynb
notebooks/old/: 03_train_minimap_objects_teacher.ipynb  05_train_fc26_hud_objects_teacher.ipynb  (+6 more)
prompts/: match-status_prompt_returns-json.txt  menu-four-logos_prompt_returns-sequence.txt  menu-is-squad-battles.txt  screenshot_prompt.txt
src/: _screenshot-helper.py  app_io.py  capture.py  capture_image_handler.py  config.py  controller.py  fc24_env.py  game_control_handler.py  game_controller.py  image.py  image_classification_inference.py  infer_image_handler.py  inference.py  linux_app.py  linux_app_io.py  macos_app.py  macos_app_io.py  nlp.py  ollama_inference.py  playstation_io.py  shared_resources.py  start.py  train_env.py  window.py  yolo_image_classification_inference.py  yolo_object_detector.py
tests/: test_action.py  test_bbox.py  test_fast_path.py  test_game_control_handler.py  test_infer_and_game_control_handlers.py  test_inference_step.py  test_parse_json_response.py  test_shared_object.py  test_squad_battles_tracker.py  test_tactical_vision_net.py  test_thread_safe_deque.py
(+35 files in other folders)
