[tool.poetry]
name = "urban-palm-tree"
version = "0.1.0"
description = "Your project description goes here."
authors = ["Your Name"]

[tool.poetry.dependencies]
python = ">=3.11"
pyobjc = "^10.2"
pyobjc-framework-screencapturekit = "^10.2"
pyscreenshot = "^3.1"
pillow = "^10.3.0"
opencv-python = "^4.9.0.80"
scikit-image = "^0.23.1"
pylint = "^3.1.0"
pynput = "^1.7.6"
requests = "^2.31.0"
